--- a/patelPackage/main/default/Classes/FilterProductController.cls
+++ b/patelPackage/main/default/Classes/FilterProductController.cls
@@ -5,4 +5,12 @@ public with sharing class FilterProductController {
         return [SELECT Id, Name, ProductCode, Description, Family, Product_Price__c FROM Product2 WHERE Name LIKE: key];
         
     }
+
+
+    // @AuraEnabled (Cacheable = true)
+    // public static List<Product2> getProductByCategory(String value){
+    //     String key = '%' + value+ '%';
+    //     return [SELECT Id, Name, ProductCode, Description, Family, Product_Price__c FROM Product2 WHERE Family LIKE: key];
+        
+    // }
 }
