product detail aura component created

--- a/patelPackage/main/default/Classes/FilterProductController.cls
+++ b/patelPackage/main/default/Classes/FilterProductController.cls
@@ -6,6 +6,12 @@ public with sharing class FilterProductController {
         
     }
 
+    @AuraEnabled (Cacheable = true)
+    public static List<Product2> getAllProduct(){
+        return [SELECT Id, Name, ProductCode, Description, Family, Product_Price__c FROM Product2 WHERE Name =: 'Pencil v1' limit 1];
+        
+    }
+
 
     // @AuraEnabled (Cacheable = true)
     // public static List<Product2> getProductByCategory(String value){
